[gd_scene load_steps=16 format=3 uid="uid://b1c488jpq4a3r"]

[ext_resource type="PackedScene" uid="uid://df05fxrfxm1jr" path="res://Menu/BG.tscn" id="1_n760s"]
[ext_resource type="Script" path="res://Menu/game_over.gd" id="1_wufvt"]
[ext_resource type="Texture2D" uid="uid://cbp7y68iqt5ia" path="res://Sunny-land-files/Graphical Assets/Menu/Game Over.png" id="2_q3rsu"]
[ext_resource type="Texture2D" uid="uid://b0re1mcvms3yr" path="res://Sunny-land-files/Graphical Assets/Menu/againbtn-normal.png" id="3_aeb24"]
[ext_resource type="Texture2D" uid="uid://8dfef4l85rj0" path="res://Sunny-land-files/Graphical Assets/Menu/againbtn-pressed.png" id="4_y232r"]
[ext_resource type="Texture2D" uid="uid://csma1itm84d1t" path="res://Sunny-land-files/Graphical Assets/Menu/againbtn-hover.png" id="5_n7eq0"]
[ext_resource type="Texture2D" uid="uid://cvw3k0kqjo4kd" path="res://Sunny-land-files/Graphical Assets/Menu/menubtn-normal.png" id="6_v1658"]
[ext_resource type="Texture2D" uid="uid://dr5w4tq3gv6ca" path="res://Sunny-land-files/Graphical Assets/Menu/menubtn-pressed.png" id="7_5aqgj"]
[ext_resource type="Texture2D" uid="uid://cjrgkfautuboy" path="res://Sunny-land-files/Graphical Assets/Menu/menubtn-hover.png" id="8_j18ro"]
[ext_resource type="AudioStream" uid="uid://bbghihxrkqm46" path="res://Audio/Music/platformer_level03_loop.ogg" id="10_nf4wd"]

[sub_resource type="Animation" id="Animation_y3wql"]
resource_name = "fade_in"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("transition/play:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.6),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("transition/play:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.6),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="Animation" id="Animation_86dbo"]
resource_name = "fade_in_death"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("transition/death:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.6),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("transition/death:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.6),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="Animation" id="Animation_nkk53"]
resource_name = "fade_out"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("transition/play:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.6),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("transition/play:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}

[sub_resource type="Animation" id="Animation_6m1t5"]
resource_name = "fade_out_death"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("transition/death:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.6),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("transition/death:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_4lx1m"]
_data = {
"fade_in": SubResource("Animation_y3wql"),
"fade_in_death": SubResource("Animation_86dbo"),
"fade_out": SubResource("Animation_nkk53"),
"fade_out_death": SubResource("Animation_6m1t5")
}

[node name="GameOver" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_wufvt")

[node name="BG" parent="." instance=ExtResource("1_n760s")]

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_left = -2.0
offset_top = -2.0
offset_right = 1159.0
offset_bottom = 650.0
color = Color(0.858824, 0.305882, 0.188235, 0.552941)

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 208.0
offset_top = -4.0
offset_right = 943.0
offset_bottom = 438.0
texture = ExtResource("2_q3rsu")

[node name="try_again" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 326.0
offset_top = 426.0
offset_right = 539.0
offset_bottom = 484.0
texture_normal = ExtResource("3_aeb24")
texture_pressed = ExtResource("4_y232r")
texture_hover = ExtResource("5_n7eq0")
ignore_texture_size = true
stretch_mode = 0

[node name="main_menu" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 632.0
offset_top = 426.0
offset_right = 845.0
offset_bottom = 484.0
texture_normal = ExtResource("6_v1658")
texture_pressed = ExtResource("7_5aqgj")
texture_hover = ExtResource("8_j18ro")
ignore_texture_size = true
stretch_mode = 0

[node name="transition" type="AnimationPlayer" parent="."]
process_mode = 3
libraries = {
"": SubResource("AnimationLibrary_4lx1m")
}

[node name="play" type="ColorRect" parent="transition"]
visible = false
self_modulate = Color(1, 1, 1, 0)
offset_right = 1156.0
offset_bottom = 654.0
color = Color(0.196078, 0.172549, 0.262745, 1)

[node name="death" type="ColorRect" parent="transition"]
offset_right = 1156.0
offset_bottom = 654.0
color = Color(0.858824, 0.305882, 0.188235, 1)

[node name="Music_menu" type="AudioStreamPlayer" parent="."]
stream = ExtResource("10_nf4wd")
volume_db = -12.0
autoplay = true

[connection signal="ready" from="." to="." method="_on_ready"]
[connection signal="pressed" from="try_again" to="." method="_on_try_again_pressed"]
[connection signal="pressed" from="main_menu" to="." method="_on_main_menu_pressed"]
